33.0.0 (17-06-2022)
- Bug Fix: Remove the personal ingression data when a student is deleted
- Refactor: Remove legacy resource allocation manager functionalities
- Refactor: Remove legacy directive council module
- Refactor: Remove legacy international relation office module
- Refactor: Remove legacy gep module
- Refactor: Remove legacy master degree administrative office module
- Refactor: Remove legacy researcher module
- Refactor: Remove legacy nape module
- Refactor: Remove legacy candidate module
- Refactor: Remove legacy external supervision module
- Refactor: Remove legacy residence management module
- Refactor: Remove legacy delegate module
- Refactor: Remove legacy public relations module
- Refactor: Remove legacy rectorate module
- Refactor: Remove legacy alumni module
- Refactor: Remove legacy library module
- Refactor: Remove legacy pedagogical council module
- Refactor: Remove legacy department member module
- Refactor: Remove evaluation abstract methods

32.14.0 (14-06-2022)
- Refactor: Add new method to check if enrolment in special season exists
- Refactor: Remove legacy curricular management functionalities

32.13.0 (07-06-2022)
- Bug Fix: Corrected english translation for group credits
- Refactor: Remove legacy curricular management functionalities
- Improvement: Add first time filter to student group

32.12.2 (02-06-2022)
- Bug Fix: Disconnect level on competence course deletion
- Bug Fix: Add missing competence course level erros messages
- Bug Fix: Avoid error on students export to excel file by teacher

32.12.1 (27-05-2022)
- Bug Fix: RegistrationConclusionBean should always use StudentCurricularPlan and ProgramConclusion precision
- Refactor: RegistrationConclusionBean constructor cleanup

32.12.0 (20-05-2022)
- Refactor: Competence course level as entity

32.11.3 (11-05-2022)
- Refactor: New statute type finders for registration

32.11.2 (09-05-2022)
- Bug Fix: Check if ingression code already exists

32.11.1 (05-05-2022)